--- a/_posts/2017-08-02-java-jvm.markdown
+++ b/_posts/2017-08-02-java-jvm.markdown
@@ -1,7 +1,8 @@
 ---
 layout: post
-title:  "JVM 内存模型"
+title:  "JVM Memory Model"
 date:   2017-08-02 05:01:29 +0100
+tags: java
 ---
 Java jvm 的全面分析。对于一名`javaer`来说深入了解下 `jvm` 的内部构造对于我们了解程序的执行原理、优化代码执行、排查性能瓶颈是很有帮助的。
 
