--- a/_posts/2017-07-25-Mysql.markdown
+++ b/_posts/2017-07-25-Mysql.markdown
@@ -61,6 +61,10 @@ MYSQL 的结构组成、各组件作用、INNODB `索引`和`锁`的深入分析
 
 针对InnoDB 的索引和锁的一些学习：
 
+* 索引详解:
+    - B+Tree
+        + InnoDB最重要的索引，根据聚簇索引和非聚簇索引实现不同。`聚簇索引` 的根子节点存储的是整条行记录,`非聚簇索引`,存储的是主键key
+
 
 
 
