change robot size

--- a/_posts/2017-07-25-Mysql.markdown
+++ b/_posts/2017-07-25-Mysql.markdown
@@ -83,6 +83,7 @@ MYSQL 的结构组成、各组件作用、INNODB `索引`和`锁`的深入分析
         - 可重复读(Repeated Read)：可重复读。在同一个事务内的查询都是事务开始时刻一致的，InnoDB默认级别。在SQL标准中，该隔离级别消除了不可重复读，`但是还存在幻象读`
         - 串行读(Serializable)：完全串行化的读，每次读都需要获得表级共享锁，读写相互都会阻塞
     > ![mysql][5]
+    > 其实这里还存在另外一种数据安全问题，即：丢失更新.严格来说这不是数据库层面的问题，应在我们的逻辑程序中处理
 
     - InnoDB 的MVCC:
         > InnoDB 通过在每行记录上面增加两个隐藏的列来实现的，这两个列，一个保存了行的创建事务ID，一个保存了行的删除事务ID
