--- a/_posts/2017-07-25-Mysql.markdown
+++ b/_posts/2017-07-25-Mysql.markdown
@@ -66,7 +66,7 @@ MYSQL 的结构组成、各组件作用、INNODB `索引`和`锁`的深入分析
 * 索引详解:
     - B+Tree
         + InnoDB最重要的索引，根据聚簇索引和非聚簇索引实现不同。`聚簇索引` 的根子节点存储的是整条行记录,`非聚簇索引`,存储的是主键key
-        + InnoDB的表存储结构是基于 聚簇索引 的结构的 (当聚簇索引索引的主键是整型自增的时候，`插入数据就变成了硬盘追加写。可大幅缩短IO时间`）
+        + InnoDB的表存储结构是基于 聚簇索引 的结构的 (当聚簇索引索引的主键是整型自增的时候，`插入数据就变成了硬盘追加写。可大幅缩短IO时间，并且可以避免因调整B+Tree树的结构的耗费`）
         + 左前缀匹配
     - Hash
         + 以字段的Hash值作为索引key 查询最好性能可以达到O(1)
@@ -109,7 +109,7 @@ MYSQL 的结构组成、各组件作用、INNODB `索引`和`锁`的深入分析
             - 获取锁和释放锁的消耗比较大
         + 间隙锁：间隙锁也是加在索引上的，RR事务隔离级别会加间隙锁防止 `不可重复读`的情况
 
-* 做的一些测试，测试表和数据请在这里下载：
+* 做的一些测试，测试表和数据请在这里<a href="/files/sql.txt" target="_blank">下载</a>：
 
     ***Test 1***
 
