--- a/_posts/2017-08-08-Kafka.markdown
+++ b/_posts/2017-08-08-Kafka.markdown
@@ -4,4 +4,5 @@ title:  "Kafka Official website translation"
 date:   2017-08-08 03:19:49 +0100
 tags: [JAVA,Kafka]
 author: Temi Lee
+published: false
 ---
