--- a/_posts/2017-08-08-Kafka.markdown
+++ b/_posts/2017-08-08-Kafka.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Kafka Official website translation"
 date:   2017-08-08 03:19:49 +0100
-tags: [JAVA,Kafka]
+tags: [JAVA,KAFKA]
 author: Temi Lee
 published: false
 ---
