--- a/_posts/2017-07-25-Mysql.markdown
+++ b/_posts/2017-07-25-Mysql.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "DEEP LEARNING OF MYSQL"
 date:   2017-07-25 05:01:29 +0100
-tags: [MYSQL,InnoDB]
+tags: [MYSQL,INNODB]
 author: Temi Lee
 modifyauthor: Temi Lee
 lastmodify: 2017-08-08 01:27:29
