modify mysql blog

--- a/_posts/2017-07-25-Mysql.markdown
+++ b/_posts/2017-07-25-Mysql.markdown
@@ -115,7 +115,7 @@ MYSQL 的结构组成、各组件作用、INNODB `索引`和`锁`的深入分析
             - 行锁不是Mysql自身提供的，而是由存储引擎实现
             - 锁定对象的颗粒度小，并发性能大，会有死锁发生
             - 获取锁和释放锁的消耗比较大
-        + 间隙锁：间隙锁也是加在索引上的，RR事务隔离级别会加间隙锁防止 `不可重复读`的情况
+        + 间隙锁(只存在于 RR 事物隔离级别)：间隙锁也是加在索引上的，RR事务隔离级别会加间隙锁防止 `不可重复读`的情况
 
 * 做的一些测试，测试表和数据请在这里<a href="/files/sql.txt" target="_blank">下载</a>：
 
