--- a/_posts/2017-09-06-JDK8.markdown
+++ b/_posts/2017-09-06-JDK8.markdown
@@ -55,7 +55,7 @@ JDK 1.8 新特性
     } );
 {% endhighlight %}
 
-    Lambda 表达式实现远离：
+    Lambda 表达式实现原理：
 
 `函数接口 :` 函数接口指的是只有一个函数的接口，这样的接口可以`隐式转换为Lambda表达式`.
 @FunctionalInterface 注解可用来显式说明某个接口是函数式接口(`默认方法和静态方法不会破坏函数式接口的定义`)
